# SystemE

./: CMakeLists.txt  Makefile  README.md  test.lily  test.lua
cmake/: FindLily.cmake
include/: console.h  framework.h  game_logic.h  graphics.h  input.h  messages.h  object_manager.h  script_interface.h  script_reader.h  systems.h
lua_lib/: Makefile  test  test.c  test.lua
src/: console.cpp  framework.cpp  game_logic.cpp  graphics.cpp  input.cpp  main.cpp  messages.cpp  object_manager.cpp  script_reader.cpp  systems.cpp
